--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-   <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
 </head>
 
-<body>
-  <script type="text/javascript" src="./game.js"></script>
+<body style="background-color: black;">
+  <div class="center" style="line-height: 1.8; background-color: white; padding-top: 10px; height: 100%; min-width: 300px; width: 25%;>
+    <h1>
+      SUNDAY BRUNCH
+    </h1>
+    Please come to a monthly open house brunch at John & Nicole's place!
+    <br/>
+    This February brunch is waffles on the 26th from 10 till 2ish.
+    <br/>
+    No need to RVSP or bring anything!
+    <br/>
+    <a href="./game.html">play the brunch game</a>
+  </div>
 </body>
-
 </html>
