--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="background-color: black;">
-  <div class="center" style="line-height: 1.8; background-color: white; padding-top: 10px; height: 100%; min-width: 300px; width: 25%;>
+  <div class="center" style="line-height: 1.8; background-color: white; padding-top: 10px; height: 100%; min-width: 300px; width: 25%;">
     <h1>
       SUNDAY BRUNCH
     </h1>
