--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </h1>
     Please come to a monthly open house brunch at John & Nicole's place!
     <br/>
-    This February brunch is waffles on the 26th from 10 till 2ish.
+    This February brunch is waffles on the 23rd from 10 till 2ish.
     <br/>
     No need to RVSP or bring anything!
     <br/>
